--- a/1/lab1.ipynb
+++ b/1/lab1.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "dafc5f0d-a358-41a5-880f-953031d6be55",
    "metadata": {},
    "outputs": [],
@@ -165,6 +165,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1d91cd54",
+   "metadata": {},
+   "source": [
+    "# Вычисление выражения"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ccaedbc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-4.5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.ones(3) * 1\n",
+    "B = np.ones(3) * 2\n",
+    "\n",
+    "result = np.matmul(np.add(A, B), np.divide(A, -2))\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ad163937-5766-46d9-b345-779118f41ed4",
    "metadata": {},
    "source": [
@@ -173,7 +206,8 @@
     "В работораторной работе были использованы методы:\n",
     "- `array` для создания матриц\n",
     "- `random.rand` для генерации случаных значений\n",
-    "- `array_equal` для сравнение матриц"
+    "- `array_equal` для сравнение матриц\n",
+    "- `matmul` для матричного перемножения"
    ]
   }
  ],
